<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NoSpam SMS</string>
    <string name="drawer_messages">Messages</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_spam_blocked">Spam &amp; blocked</string>
    <string name="drawer_settings">Settings</string>
    <plurals name="drawer_new_count">
        <item quantity="one">%d new</item>
        <item quantity="other">%d new</item>
    </plurals>
</resources>

